--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "vuedraggable": "^2.23.2",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.3",
-    "vuex-persistedstate": "^2.7.0"
+    "vuex-persistedstate": "^2.7.0",
+    "websocket-extensions": "0.1.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "^4.3.0",
